# servant-auth-and-purescript-pux-example

./: .gitignore  README.md  Setup.hs  back.purs  servant-auth-and-purescript-pux-example.cabal  servant-auth-and-pux-example.cabal
purescript/: bower.json  index.html  index.js  package.json
purescript/src/: Main.purs
src/: Server.hs
static/: app.js  index.html
